[project]
name = "runpod-build"
version = "0.1.0"
description = "A CLI tool to deploy RunPod templates to specific GPUs with automatic data extraction via S3."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.55",
    "click>=8.3.1",
    "python-dotenv>=1.2.1",
    "runpod>=1.8.1",
]

[project.scripts]
runpod-build = "runpod_build.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
